# cpp-simple-config-parser

./: .gitignore  CMakeLists.txt  README.md
include/: configparser.h  utils.h
include/simple_config_parser/: parser.h  utils.h
src/: CMakeLists.txt  configparser.cpp  main.cpp  parser.cpp  utils.cpp
